# netwho

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  fix_search.sql  main.py  migration_epic6.sql  migration_settings.sql  prompts.yaml  pyproject.toml  requirements.txt  schema.sql  test_db.py
.cursor/rules/: gemini-3-flash.md  gemini-3-pro.md
.cursor/stories/: story-01-setup.md  story-02-ai-services.md  story-03-db-logic.md  story-04-voice-pipeline.md  story-05-router-agent.md  story-06-final-polish.md  story-07-onboarding.md  story-07-settings-and-polish.md  story-08-persona.md  story-09-monetization.md  story-10-multilanguage.md  story-10-ux-fixes.md  story-11-subscription-abuse-fix.md  story-12-organizations-b2b.md  story-13-org-foundation.md  story-14-org-repo-layer.md  story-15-org-hybrid-search.md  story-16-org-ui-scope.md  story-17-org-admin-tools.md  story-18-ux-polish.md  story-19-true-hybrid.md  (+9 more)
.cursor/tz/: org_prd.md  (+3 more)
app/: config.py  main.py  prompts_loader.py  schemas.py  states.py
migrations/: 02_freemium_update.sql  fix_foundation_story13.sql  fix_rpc_ambiguity_v4.sql  fix_search_access_story23.sql  fix_search_v2.sql  fix_unified_search_v5.sql  fix_vector_search_security.sql  fix_vector_search_v3.sql  migration_epic1_gate.sql  migration_epic6_v2.sql  migration_epic8.sql  migration_epic9.sql  migration_history.sql  migration_settings_v2.sql
scripts/: check_db.py  check_raw_db.py  check_user_debug.py  debug_recall_logic.py  fix_user_recall.py  revoke_trial.py  test_ai.py  test_db.py
(+23 files in other folders)
